cluster/apps/rssbridge/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rssbridge
  labels:
    goldilocks.fairwinds.com/enabled: "true"
