cluster/apps/rssbridge/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rssbridge
  namespace: rssbridge
spec:
  selector:
    matchLabels:
      app: rssbridge
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rssbridge
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - rssbridge
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: rssbridge
          image: ghcr.io/rss-bridge/rss-bridge:2022-06-14
          ports:
            - name: web
              containerPort: 80
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 50m
              memory: 128Mi
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 120
            periodSeconds: 30
          volumeMounts:
            - name: whitelist-txt
              mountPath: /app/whitelist.txt
              subPath: whitelist.txt
            - name: config-ini-php
              mountPath: /app/config.ini.php
              subPath: config.ini.php
        - name: memcached
          image: memcached:1.6.17
          ports:
            - name: memcached
              containerPort: 11211
          resources:
            requests:
              cpu: 10m
              memory: 20Mi
            limits:
              cpu: 20m
              memory: 40Mi
          livenessProbe:
            tcpSocket:
              port: 11211
            initialDelaySeconds: 120
            periodSeconds: 30
      restartPolicy: Always
      volumes:
        - name: whitelist-txt
          configMap:
            name: whitelist-txt
            defaultMode: 0755
            items:
              - key: whitelist.txt
                path: whitelist.txt
        - name: config-ini-php
          configMap:
            name: config-ini-php
            defaultMode: 0755
            items:
              - key: config.ini.php
                path: config.ini.php
