cluster/apps/rssbridge/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rssbridge
  namespace: rssbridge
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
  selector:
    app: rssbridge
