cluster/apps/rssbridge/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rssbridge-ingress
  namespace: rssbridge
  annotations:
    haproxy.org/whitelist: "${HAPROXY_WHITELIST}"
    haproxy.org/response-set-header: |
      Strict-Transport-Security "max-age=31536000"
      X-Frame-Options "DENY"
      X-Content-Type-Options "nosniff"
      Referrer-Policy "no-referrer-when-downgrade"
spec:
  rules:
    - host: "rssbridge.${SECRET_PUBLIC_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rssbridge
                port:
                  number: 80
  tls:
    - secretName: "${SECRET_PUBLIC_DOMAIN_CERT}"
      hosts:
        - "rssbridge.${SECRET_PUBLIC_DOMAIN}"
